--- a/requirements.txt
+++ b/requirements.txt
@@ -78,8 +78,9 @@ uvicorn==0.34.0
 Werkzeug==3.1.5
 wrapt==1.14.1
 python-dotenv==1.0.1
-ml-dtypes=0.4.1
-psycopg2=2.9.11
+ml-dtypes==0.4.1
+psycopg2==2.9.11
+
 
 
 
